--- a/src/pages/about/styles.module.css
+++ b/src/pages/about/styles.module.css
@@ -60,7 +60,7 @@
 }
 
 .tlPeriod {
-  flex: 0 0 110px;
+  flex: 0 0 130px;
   font-weight: 700;
   color: var(--ifm-color-primary);
   font-size: 0.95rem;
